examples/green_blue_manual/blue.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    color: blue
    app: example
  name: blue-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example
      color: blue
  template:
    metadata:
      name: nginx
      labels:
        app: example
        color: blue
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
