examples/green_blue_manual/green.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    color: green
    app: example
  name: green-httpd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example
      color: green
  template:
    metadata:
      name: httpd
      labels:
        app: example
        color: green
    spec:
      containers:
        - name: httpd
          image: httpd
          ports:
            - containerPort: 80
