examples/green_blue_manual/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: example
  name: ingress-green-blue
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: svc-blue-green
                port:
                  number: 80
            path: /
            pathType: Prefix
